<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jagrosh</groupId>
    <artifactId>JMusicBot</artifactId>
    <version>Snapshot</version>
    <packaging>jar</packaging>

    <repositories>
        <repository>
            <id>chew</id>
            <name>m2-chew</name>
            <url>https://m2.chew.pro/releases</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>m2.duncte123.dev</id>
            <name>m2-duncte123</name>
            <url>https://m2.duncte123.dev/releases</url>
        </repository>
        <repository>
            <id>arbjergDev</id>
            <name>Lavalink Repository</name>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
        <repository>
            <id>arbjergDevSnapshots</id>
            <name>Lavalink Snapshots</name>
            <url>https://maven.lavalink.dev/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>kyokobot</id>
            <name>KyokoBot Repository</name>
            <url>https://repository.kyokobot.moe/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>6.3.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.Chew.JDA-Chewtils</groupId>
            <artifactId>jda-chewtils</artifactId>
            <version>master-db6eaa55e1-1</version>
            <scope>compile</scope>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>com.github.Chew.JDA-Chewtils</groupId>
            <artifactId>jda-chewtils-command</artifactId>
            <version>master-db6eaa55e1-1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Chew.JDA-Chewtils</groupId>
            <artifactId>jda-chewtils-examples</artifactId>
            <version>master-db6eaa55e1-1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>adapter-jda</artifactId>
            <version>0.1.2</version>
        </dependency>
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>impl-jni</artifactId>
            <version>0.1.2</version>
        </dependency>
        
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-linux-aarch64</artifactId>
            <version>0.1.2</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-linux-x86-64</artifactId>
            <version>0.1.2</version>
        </dependency>
        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-win-x86-64</artifactId>
            <version>0.1.2</version>
        </dependency>

        <dependency>
            <groupId>dev.arbjerg</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>2.2.7</version>
        </dependency>
        <dependency>
            <groupId>dev.lavalink.youtube</groupId>
            <artifactId>common</artifactId>
            <version>1.18.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.jagrosh</groupId>
            <artifactId>JLyrics</artifactId>
            <version>master-01cf4ee007-1</version>
        </dependency>
        <dependency>
            <groupId>com.dunctebot</groupId>
            <artifactId>sourcemanagers</artifactId>
            <version>1.9.0</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.15.3</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
      <!-- finalName removes the version from the output jar so the filename
           stays stable (JMusicBot-All.jar) regardless of <version>. -->
      <finalName>${project.artifactId}</finalName>
      <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.2</version>
        </plugin>
        <!-- Configures the thin jar's manifest with Main-Class and Class-Path
             pointing to libs/ — used by the Docker layered build. -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.4.2</version>
            <configuration>
                <archive>
                    <manifest>
                        <mainClass>com.jagrosh.jmusicbot.JMusicBot</mainClass>
                        <addClasspath>true</addClasspath>
                        <classpathPrefix>libs/</classpathPrefix>
                    </manifest>
                </archive>
            </configuration>
        </plugin>

        <!-- Copies all runtime dependencies to target/libs/ during package phase.
             Docker copies this directory as its own layer so it is only
             re-uploaded when pom.xml (i.e. dependencies) actually change. -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.7.1</version>
            <executions>
                <execution>
                    <id>copy-dependencies</id>
                    <phase>package</phase>
                    <goals>
                        <goal>copy-dependencies</goal>
                    </goals>
                    <configuration>
                        <outputDirectory>${project.build.directory}/libs</outputDirectory>
                        <includeScope>runtime</includeScope>
                    </configuration>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.6.0</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <shadedArtifactAttached>true</shadedArtifactAttached>
                        <shadedClassifierName>All</shadedClassifierName>
                        <artifactSet>
                            <includes>
                                <include>*:*</include>
                            </includes>
                        </artifactSet>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                <resource>reference.conf</resource>
                            </transformer>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <manifestEntries>
                                    <Main-Class>com.jagrosh.jmusicbot.JMusicBot</Main-Class>
                                    <Specification-Title>${project.artifactId}</Specification-Title>
                                    <Specification-Version>${project.version}</Specification-Version>
                                    <Implementation-Title>${project.artifactId}</Implementation-Title>
                                    <Implementation-Version>${project.version}</Implementation-Version>
                                    <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
                                </manifestEntries>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>
      </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
    </properties>
</project>

